--- a/VidCoder/Resources/EnumsRes.pl.resx
+++ b/VidCoder/Resources/EnumsRes.pl.resx
@@ -118,65 +118,65 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Anamorphic_Custom" xml:space="preserve">
-    <value>Vlastní</value>
+    <value>Ustawienia własne</value>
   </data>
   <data name="Anamorphic_Loose" xml:space="preserve">
-    <value>Volné</value>
+    <value>Luźny</value>
   </data>
   <data name="Anamorphic_None" xml:space="preserve">
-    <value>Žádné</value>
+    <value>Brak</value>
   </data>
   <data name="Anamorphic_Strict" xml:space="preserve">
-    <value>Striktní</value>
+    <value>Dokładny</value>
   </data>
   <data name="Custom" xml:space="preserve">
-    <value>Vlastní</value>
+    <value>Ustawienia własne</value>
   </data>
   <data name="Decomb_Bob" xml:space="preserve">
-    <value>Bob</value>
+    <value>Drganie</value>
   </data>
   <data name="Decomb_Fast" xml:space="preserve">
-    <value>Rychlé</value>
+    <value>Szybki</value>
   </data>
   <data name="Default" xml:space="preserve">
-    <value>Výchozí</value>
+    <value>Domyślne</value>
   </data>
   <data name="Deinterlace_Bob" xml:space="preserve">
-    <value>Bob</value>
+    <value>Drganie</value>
     <comment>A deinterlace method named "Bob". The original name most likely refers to an object bobbing up and down.</comment>
   </data>
   <data name="Deinterlace_Fast" xml:space="preserve">
-    <value>Rychlé</value>
+    <value>Szybki</value>
   </data>
   <data name="Deinterlace_Slow" xml:space="preserve">
-    <value>Pomalé</value>
+    <value>Wolny</value>
   </data>
   <data name="Deinterlace_Slower" xml:space="preserve">
-    <value>Pomalejší</value>
+    <value>Wolniejszy</value>
   </data>
   <data name="DenoisePreset_Light" xml:space="preserve">
-    <value>Slabé</value>
+    <value>Lekkie</value>
   </data>
   <data name="DenoisePreset_Medium" xml:space="preserve">
-    <value>Střední</value>
+    <value>Średnie</value>
   </data>
   <data name="DenoisePreset_Strong" xml:space="preserve">
-    <value>Silné</value>
+    <value>Silne</value>
   </data>
   <data name="DenoisePreset_Ultralight" xml:space="preserve">
-    <value>Velmi slabé</value>
+    <value>Super lekkie</value>
   </data>
   <data name="DenoiseTune_Animation" xml:space="preserve">
-    <value>Animace</value>
+    <value>Animacja</value>
   </data>
   <data name="DenoiseTune_Film" xml:space="preserve">
     <value>Film</value>
   </data>
   <data name="DenoiseTune_Grain" xml:space="preserve">
-    <value>Zrnitý obraz</value>
+    <value>Ziarnistość</value>
   </data>
   <data name="DenoiseTune_HighMotion" xml:space="preserve">
-    <value>Rychlý pohyb</value>
+    <value>Szybki ruch</value>
   </data>
   <data name="Denoise_HQDN3D" xml:space="preserve">
     <value>hqdn3d</value>
@@ -185,30 +185,30 @@
     <value>NL-Means</value>
   </data>
   <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
-    <value>Nedělat nic</value>
+    <value>Nie rób nic</value>
   </data>
   <data name="EncodeCompleteActionType_EjectDisc" xml:space="preserve">
-    <value>Vysunout {0}:</value>
+    <value>Wysuń {0}:</value>
   </data>
   <data name="EncodeCompleteActionType_LogOff" xml:space="preserve">
-    <value>Odhlásit</value>
+    <value>Wyloguj</value>
   </data>
   <data name="EncodeCompleteActionType_Shutdown" xml:space="preserve">
-    <value>Vypnout</value>
+    <value>Zamknij system</value>
   </data>
   <data name="EncodeCompleteActionType_Sleep" xml:space="preserve">
-    <value>Režim spánku</value>
+    <value>Uśpienie</value>
   </data>
   <data name="Off" xml:space="preserve">
-    <value>Vypnuto</value>
+    <value>Wyłącz</value>
   </data>
   <data name="VideoRangeType_Chapters" xml:space="preserve">
-    <value>Kapitoly</value>
+    <value>Rozdziały</value>
   </data>
   <data name="VideoRangeType_Frames" xml:space="preserve">
-    <value>Snímky</value>
+    <value>Ramki</value>
   </data>
   <data name="VideoRangeType_Seconds" xml:space="preserve">
-    <value>Časový rozsah</value>
+    <value>Zakres czasu</value>
   </data>
 </root>
