--- a/VidCoder/Resources/EnumsRes.zh-Hant.resx
+++ b/VidCoder/Resources/EnumsRes.zh-Hant.resx
@@ -154,16 +154,36 @@
   <data name="Deinterlace_Slower" xml:space="preserve">
     <value>較慢</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="DenoisePreset_Light" xml:space="preserve">
+    <value>輕</value>
+  </data>
+  <data name="DenoisePreset_Medium" xml:space="preserve">
+    <value>中</value>
+  </data>
+  <data name="DenoisePreset_Strong" xml:space="preserve">
+    <value>重</value>
+  </data>
+  <data name="DenoisePreset_Ultralight" xml:space="preserve">
+    <value>極輕</value>
+  </data>
+  <data name="DenoiseTune_Animation" xml:space="preserve">
+    <value>動畫</value>
+  </data>
+  <data name="DenoiseTune_Film" xml:space="preserve">
+    <value>電影</value>
+  </data>
+  <data name="DenoiseTune_Grain" xml:space="preserve">
+    <value>膠片顆粒</value>
+  </data>
+  <data name="DenoiseTune_HighMotion" xml:space="preserve">
+    <value>高動態</value>
+  </data>
+  <data name="Denoise_HQDN3D" xml:space="preserve">
+    <value>hqdn3d</value>
+  </data>
+  <data name="Denoise_NLMeans" xml:space="preserve">
+    <value>非局部平均降噪</value>
+  </data>
   <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
     <value>不執行任何動作</value>
   </data>
