--- a/VidCoder/Resources/LogRes.pl.resx
+++ b/VidCoder/Resources/LogRes.pl.resx
@@ -117,98 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Anamorphic_Custom" xml:space="preserve">
-    <value>Vlastní</value>
+  <data name="ClearButton" xml:space="preserve">
+    <value>Wyczyść</value>
   </data>
-  <data name="Anamorphic_Loose" xml:space="preserve">
-    <value>Volné</value>
-  </data>
-  <data name="Anamorphic_None" xml:space="preserve">
-    <value>Žádné</value>
-  </data>
-  <data name="Anamorphic_Strict" xml:space="preserve">
-    <value>Striktní</value>
-  </data>
-  <data name="Custom" xml:space="preserve">
-    <value>Vlastní</value>
-  </data>
-  <data name="Decomb_Bob" xml:space="preserve">
-    <value>Bob</value>
-  </data>
-  <data name="Decomb_Fast" xml:space="preserve">
-    <value>Rychlé</value>
-  </data>
-  <data name="Default" xml:space="preserve">
-    <value>Výchozí</value>
-  </data>
-  <data name="Deinterlace_Bob" xml:space="preserve">
-    <value>Bob</value>
-    <comment>A deinterlace method named "Bob". The original name most likely refers to an object bobbing up and down.</comment>
-  </data>
-  <data name="Deinterlace_Fast" xml:space="preserve">
-    <value>Rychlé</value>
-  </data>
-  <data name="Deinterlace_Slow" xml:space="preserve">
-    <value>Pomalé</value>
-  </data>
-  <data name="Deinterlace_Slower" xml:space="preserve">
-    <value>Pomalejší</value>
-  </data>
-  <data name="DenoisePreset_Light" xml:space="preserve">
-    <value>Slabé</value>
-  </data>
-  <data name="DenoisePreset_Medium" xml:space="preserve">
-    <value>Střední</value>
-  </data>
-  <data name="DenoisePreset_Strong" xml:space="preserve">
-    <value>Silné</value>
-  </data>
-  <data name="DenoisePreset_Ultralight" xml:space="preserve">
-    <value>Velmi slabé</value>
-  </data>
-  <data name="DenoiseTune_Animation" xml:space="preserve">
-    <value>Animace</value>
-  </data>
-  <data name="DenoiseTune_Film" xml:space="preserve">
-    <value>Film</value>
-  </data>
-  <data name="DenoiseTune_Grain" xml:space="preserve">
-    <value>Zrnitý obraz</value>
-  </data>
-  <data name="DenoiseTune_HighMotion" xml:space="preserve">
-    <value>Rychlý pohyb</value>
-  </data>
-  <data name="Denoise_HQDN3D" xml:space="preserve">
-    <value>hqdn3d</value>
-  </data>
-  <data name="Denoise_NLMeans" xml:space="preserve">
-    <value>NL-Means</value>
-  </data>
-  <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
-    <value>Nedělat nic</value>
-  </data>
-  <data name="EncodeCompleteActionType_EjectDisc" xml:space="preserve">
-    <value>Vysunout {0}:</value>
-  </data>
-  <data name="EncodeCompleteActionType_LogOff" xml:space="preserve">
-    <value>Odhlásit</value>
-  </data>
-  <data name="EncodeCompleteActionType_Shutdown" xml:space="preserve">
-    <value>Vypnout</value>
-  </data>
-  <data name="EncodeCompleteActionType_Sleep" xml:space="preserve">
-    <value>Režim spánku</value>
-  </data>
-  <data name="Off" xml:space="preserve">
-    <value>Vypnuto</value>
-  </data>
-  <data name="VideoRangeType_Chapters" xml:space="preserve">
-    <value>Kapitoly</value>
-  </data>
-  <data name="VideoRangeType_Frames" xml:space="preserve">
-    <value>Snímky</value>
-  </data>
-  <data name="VideoRangeType_Seconds" xml:space="preserve">
-    <value>Časový rozsah</value>
+  <data name="LogWindowTitle" xml:space="preserve">
+    <value>Dziennik</value>
   </data>
 </root>
