--- a/VidCoder/Resources/MiscRes.pl.resx
+++ b/VidCoder/Resources/MiscRes.pl.resx
@@ -117,98 +117,138 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Anamorphic_Custom" xml:space="preserve">
-    <value>Vlastní</value>
+  <data name="AddButton" xml:space="preserve">
+    <value>Dodaj</value>
   </data>
-  <data name="Anamorphic_Loose" xml:space="preserve">
-    <value>Volné</value>
+  <data name="RefreshButton" xml:space="preserve">
+    <value>Odśwież</value>
   </data>
-  <data name="Anamorphic_None" xml:space="preserve">
-    <value>Žádné</value>
+  <data name="ChooseFromProcessesLabel" xml:space="preserve">
+    <value>Wybierz z istniejących procesów:</value>
   </data>
-  <data name="Anamorphic_Strict" xml:space="preserve">
-    <value>Striktní</value>
+  <data name="AddAutoPauseProcessDialogTitle" xml:space="preserve">
+    <value>Dodaj proces, przy którym nastąpi automatyczna pauza</value>
   </data>
-  <data name="Custom" xml:space="preserve">
-    <value>Vlastní</value>
+  <data name="ProcessNameLabel" xml:space="preserve">
+    <value>Nazwa procesu:</value>
   </data>
-  <data name="Decomb_Bob" xml:space="preserve">
-    <value>Bob</value>
+  <data name="ExceptionDialogMainText" xml:space="preserve">
+    <value>Program VidCoder doświadczył nieoczekiwanego błędu.</value>
   </data>
-  <data name="Decomb_Fast" xml:space="preserve">
-    <value>Rychlé</value>
+  <data name="ExceptionDialogSubText" xml:space="preserve">
+    <value>Proszę zgłosić to, aby można to naprawić w przyszłości.</value>
   </data>
-  <data name="Default" xml:space="preserve">
-    <value>Výchozí</value>
+  <data name="ExceptionWindowTitle" xml:space="preserve">
+    <value>Wyjątek</value>
   </data>
-  <data name="Deinterlace_Bob" xml:space="preserve">
-    <value>Bob</value>
-    <comment>A deinterlace method named "Bob". The original name most likely refers to an object bobbing up and down.</comment>
+  <data name="FileConflictDialogTitle" xml:space="preserve">
+    <value>Konflikt pliku</value>
   </data>
-  <data name="Deinterlace_Fast" xml:space="preserve">
-    <value>Rychlé</value>
+  <data name="OverwriteButton" xml:space="preserve">
+    <value>Nadpisz</value>
   </data>
-  <data name="Deinterlace_Slow" xml:space="preserve">
-    <value>Pomalé</value>
+  <data name="AutoRenameButton" xml:space="preserve">
+    <value>Automatyczna zmiana nazwy</value>
   </data>
-  <data name="Deinterlace_Slower" xml:space="preserve">
-    <value>Pomalejší</value>
+  <data name="FileConflictWarning" xml:space="preserve">
+    <value>Plik już istnieje w {0}. Czy chcesz zastąpić plik, automatycznie znaleźć nową ścieżkę wyjściową do pracy kodowania lub anulować operację?</value>
   </data>
-  <data name="DenoisePreset_Light" xml:space="preserve">
-    <value>Slabé</value>
+  <data name="QueueFileConflictWarning" xml:space="preserve">
+    <value>Zadanie kolejki już istnieje w ścieżce wyjściowej {0}. Czy chcesz zastąpić plik, automatycznie znaleźć nową ścieżkę wyjściową do pracy kodowania lub anulować operację?</value>
   </data>
-  <data name="DenoisePreset_Medium" xml:space="preserve">
-    <value>Střední</value>
+  <data name="QueueColumnsDialogTitle" xml:space="preserve">
+    <value>Kolumny kolejki</value>
   </data>
-  <data name="DenoisePreset_Strong" xml:space="preserve">
-    <value>Silné</value>
+  <data name="QueueColumnsDialogHeaderText" xml:space="preserve">
+    <value>Przeciągnij i upuść, aby dodać, usunąć lub zmienić kolejność kolumn.</value>
   </data>
-  <data name="DenoisePreset_Ultralight" xml:space="preserve">
-    <value>Velmi slabé</value>
+  <data name="UnusedColumns" xml:space="preserve">
+    <value>Nieużywane kolumny</value>
   </data>
-  <data name="DenoiseTune_Animation" xml:space="preserve">
-    <value>Animace</value>
+  <data name="UsedColumns" xml:space="preserve">
+    <value>Używane kolumny</value>
   </data>
-  <data name="DenoiseTune_Film" xml:space="preserve">
-    <value>Film</value>
+  <data name="ScanMultipleWindowTitle" xml:space="preserve">
+    <value>Skanowanie...</value>
   </data>
-  <data name="DenoiseTune_Grain" xml:space="preserve">
-    <value>Zrnitý obraz</value>
+  <data name="UpdateSuccessDialogTitle" xml:space="preserve">
+    <value>Sukces</value>
   </data>
-  <data name="DenoiseTune_HighMotion" xml:space="preserve">
-    <value>Rychlý pohyb</value>
+  <data name="UpdateSuccessDialogMessage" xml:space="preserve">
+    <value>VidCoder został pomyślnie zaktualizowany.</value>
   </data>
-  <data name="Denoise_HQDN3D" xml:space="preserve">
-    <value>hqdn3d</value>
+  <data name="AboutVidCoderDialogTitle" xml:space="preserve">
+    <value>O programie VidCoder</value>
   </data>
-  <data name="Denoise_NLMeans" xml:space="preserve">
-    <value>NL-Means</value>
+  <data name="LicenseLabel" xml:space="preserve">
+    <value>Licencja:</value>
   </data>
-  <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
-    <value>Nedělat nic</value>
+  <data name="Version" xml:space="preserve">
+    <value>Wersja</value>
   </data>
-  <data name="EncodeCompleteActionType_EjectDisc" xml:space="preserve">
-    <value>Vysunout {0}:</value>
+  <data name="BasedOnHandBrake" xml:space="preserve">
+    <value>Oparty na HandBrake({0})</value>
   </data>
-  <data name="EncodeCompleteActionType_LogOff" xml:space="preserve">
-    <value>Odhlásit</value>
+  <data name="Copyright" xml:space="preserve">
+    <value>© {0} VidCoder Developers</value>
   </data>
-  <data name="EncodeCompleteActionType_Shutdown" xml:space="preserve">
-    <value>Vypnout</value>
+  <data name="VersionFormat" xml:space="preserve">
+    <value>{0} ({1})</value>
+    <comment>First is version, second is architecture. For example: 1.4.2 (x64)</comment>
   </data>
-  <data name="EncodeCompleteActionType_Sleep" xml:space="preserve">
-    <value>Režim spánku</value>
+  <data name="BetaVersionFormat" xml:space="preserve">
+    <value>{0} Beta ({1})</value>
+    <comment>First is version, second is architecture. For example: 1.4.2 Beta (x64)</comment>
   </data>
-  <data name="Off" xml:space="preserve">
-    <value>Vypnuto</value>
+  <data name="PresetNameDialogTitle" xml:space="preserve">
+    <value>Nazwa ustawień</value>
   </data>
-  <data name="VideoRangeType_Chapters" xml:space="preserve">
-    <value>Kapitoly</value>
+  <data name="ChoosePresetName" xml:space="preserve">
+    <value>Wybierz nazwę ustawień:</value>
   </data>
-  <data name="VideoRangeType_Frames" xml:space="preserve">
-    <value>Snímky</value>
+  <data name="ApplyUpdateDialogTitle" xml:space="preserve">
+    <value>Zastosowanie aktualizacji?</value>
   </data>
-  <data name="VideoRangeType_Seconds" xml:space="preserve">
-    <value>Časový rozsah</value>
+  <data name="ApplyUpdateDialogMessage" xml:space="preserve">
+    <value>Aktualizacja została pobrana. Czy chcesz ją zainstalować?</value>
+  </data>
+  <data name="ViewFullChangelog" xml:space="preserve">
+    <value>Zobacz pełną listę zmian</value>
+  </data>
+  <data name="DisableUpdatesButton" xml:space="preserve">
+    <value>Wyłącz aktualizacje</value>
+  </data>
+  <data name="NoticeMessageTitle" xml:space="preserve">
+    <value>Powiadomienie</value>
+  </data>
+  <data name="UnsupportedOSError" xml:space="preserve">
+    <value>VidCoder nie jest obsługiwany w twoim systemie operacyjnym. Windows XP i Server 2003 przestały działać. Proszę zainstalować VidCoder 1.4 lub uaktualnij system operacyjny.</value>
+  </data>
+  <data name="EncodeCompleteWarning_SleepTitle" xml:space="preserve">
+    <value>Nadchodzące uśpienie</value>
+  </data>
+  <data name="EncodeCompleteWarning_LogOffTitle" xml:space="preserve">
+    <value>Nadchodzące wylogowanie</value>
+  </data>
+  <data name="EncodeCompleteWarning_ShutdownTitle" xml:space="preserve">
+    <value>Nadchodzące zamknięcie</value>
+  </data>
+  <data name="EncodeCompleteWarning_SleepMessage" xml:space="preserve">
+    <value>System zostanie uśpiony za {0} sekund.</value>
+  </data>
+  <data name="EncodeCompleteWarning_LogOffMessage" xml:space="preserve">
+    <value>Zostaniesz wylogowany za {0} sekund.</value>
+  </data>
+  <data name="EncodeCompleteWarning_ShutdownMessage" xml:space="preserve">
+    <value>System zostanie zamknięty za {0} sekund.</value>
+  </data>
+  <data name="EncodeCompleteWarning_Title" xml:space="preserve">
+    <value>Enkodowanie zostało ukończone.</value>
+  </data>
+	<data name="CouldNotFindVideoPlayerError" xml:space="preserve">
+    <value>Nie można odnaleźć odtwarzacza wideo dla {0}.</value>
+  </data>
+	<data name="ErrorPlayingSource" xml:space="preserve">
+    <value>Błąd odtwarzania źródła.</value>
   </data>
 </root>
