--- a/VidCoder/Resources/PreviewRes.pl.resx
+++ b/VidCoder/Resources/PreviewRes.pl.resx
@@ -117,98 +117,70 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Anamorphic_Custom" xml:space="preserve">
-    <value>Vlastní</value>
+  <data name="PlaySourceButton" xml:space="preserve">
+    <value>Odtwórz źródło</value>
   </data>
-  <data name="Anamorphic_Loose" xml:space="preserve">
-    <value>Volné</value>
+  <data name="EncodePreviewClipButton" xml:space="preserve">
+    <value>Enkoduj Klip Podglądu</value>
   </data>
-  <data name="Anamorphic_None" xml:space="preserve">
-    <value>Žádné</value>
+  <data name="EncodePreviewClipToolTip" xml:space="preserve">
+    <value>Enkoduje i odtwarza krótki podgląd klipu wideo z zaznaczonego ekranu. Używa bieżących ustawień enkodowania.</value>
   </data>
-  <data name="Anamorphic_Strict" xml:space="preserve">
-    <value>Striktní</value>
+  <data name="GeneratingPreview" xml:space="preserve">
+    <value>Generowanie podglądu...</value>
   </data>
-  <data name="Custom" xml:space="preserve">
-    <value>Vlastní</value>
+  <data name="PlaySourceDisabledBluRayToolTip" xml:space="preserve">
+    <value>Podgląd źródła dla Blu-ray nie jest jeszcze obsługiwany.</value>
   </data>
-  <data name="Decomb_Bob" xml:space="preserve">
-    <value>Bob</value>
+  <data name="PlaySourceDisabledNoPlayerToolTip" xml:space="preserve">
+    <value>Nie można odnaleźć obsługiwanego odtwarzacz DVD. Zainstaluj VLC lub MPC-HC, aby użyć tej funkcji.</value>
   </data>
-  <data name="Decomb_Fast" xml:space="preserve">
-    <value>Rychlé</value>
+  <data name="PlaySourceToolTip" xml:space="preserve">
+    <value>Odtwarza źródłowy klip wideo.</value>
   </data>
-  <data name="Default" xml:space="preserve">
-    <value>Výchozí</value>
+  <data name="PreviewClipGenerationFailedMessage" xml:space="preserve">
+    <value>Generacja podgląd klipu nie powiodła się. Szczegóły dostępne w oknie dziennika.</value>
   </data>
-  <data name="Deinterlace_Bob" xml:space="preserve">
-    <value>Bob</value>
-    <comment>A deinterlace method named "Bob". The original name most likely refers to an object bobbing up and down.</comment>
+  <data name="PreviewClipGenerationFailedTitle" xml:space="preserve">
+    <value>Generacja podgląd klipu nie powiodła się</value>
   </data>
-  <data name="Deinterlace_Fast" xml:space="preserve">
-    <value>Rychlé</value>
+  <data name="PreviewWindowTitleSimple" xml:space="preserve">
+    <value>Podgląd: {0} x {1}</value>
   </data>
-  <data name="Deinterlace_Slow" xml:space="preserve">
-    <value>Pomalé</value>
+  <data name="PreviewWindowTitleComplex" xml:space="preserve">
+    <value>Podgląd: Wyświetl {0} x {1} - Magazyn {2} x {3}</value>
   </data>
-  <data name="Deinterlace_Slower" xml:space="preserve">
-    <value>Pomalejší</value>
+  <data name="NoVideoSourceTitle" xml:space="preserve">
+    <value>Podgląd: Brak źródła wideo</value>
   </data>
-  <data name="DenoisePreset_Light" xml:space="preserve">
-    <value>Slabé</value>
+  <data name="Seconds" xml:space="preserve">
+    <value>sekund(y)</value>
   </data>
-  <data name="DenoisePreset_Medium" xml:space="preserve">
-    <value>Střední</value>
+  <data name="PreviewDisplay_Corners" xml:space="preserve">
+    <value>Narożniki</value>
   </data>
-  <data name="DenoisePreset_Strong" xml:space="preserve">
-    <value>Silné</value>
+  <data name="PreviewDisplay_FitToWindow" xml:space="preserve">
+    <value>Dopasuj do okna</value>
   </data>
-  <data name="DenoisePreset_Ultralight" xml:space="preserve">
-    <value>Velmi slabé</value>
+  <data name="PreviewDisplay_OneToOne" xml:space="preserve">
+    <value>1:1</value>
   </data>
-  <data name="DenoiseTune_Animation" xml:space="preserve">
-    <value>Animace</value>
+  <data name="ViewLabel" xml:space="preserve">
+    <value>Widok:</value>
   </data>
-  <data name="DenoiseTune_Film" xml:space="preserve">
-    <value>Film</value>
+  <data name="TopMargin" xml:space="preserve">
+    <value>Margines górny</value>
   </data>
-  <data name="DenoiseTune_Grain" xml:space="preserve">
-    <value>Zrnitý obraz</value>
+  <data name="LeftMargin" xml:space="preserve">
+    <value>Margines lewy</value>
   </data>
-  <data name="DenoiseTune_HighMotion" xml:space="preserve">
-    <value>Rychlý pohyb</value>
+  <data name="RightMargin" xml:space="preserve">
+    <value>Margines prawy</value>
   </data>
-  <data name="Denoise_HQDN3D" xml:space="preserve">
-    <value>hqdn3d</value>
+  <data name="BottomMargin" xml:space="preserve">
+    <value>Margines dolny</value>
   </data>
-  <data name="Denoise_NLMeans" xml:space="preserve">
-    <value>NL-Means</value>
-  </data>
-  <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
-    <value>Nedělat nic</value>
-  </data>
-  <data name="EncodeCompleteActionType_EjectDisc" xml:space="preserve">
-    <value>Vysunout {0}:</value>
-  </data>
-  <data name="EncodeCompleteActionType_LogOff" xml:space="preserve">
-    <value>Odhlásit</value>
-  </data>
-  <data name="EncodeCompleteActionType_Shutdown" xml:space="preserve">
-    <value>Vypnout</value>
-  </data>
-  <data name="EncodeCompleteActionType_Sleep" xml:space="preserve">
-    <value>Režim spánku</value>
-  </data>
-  <data name="Off" xml:space="preserve">
-    <value>Vypnuto</value>
-  </data>
-  <data name="VideoRangeType_Chapters" xml:space="preserve">
-    <value>Kapitoly</value>
-  </data>
-  <data name="VideoRangeType_Frames" xml:space="preserve">
-    <value>Snímky</value>
-  </data>
-  <data name="VideoRangeType_Seconds" xml:space="preserve">
-    <value>Časový rozsah</value>
+	<data name="PlaySourceDisabledNotFoundToolTip" xml:space="preserve">
+    <value>Nie można znaleźć pliku źródłowego.</value>
   </data>
 </root>
